<resources>
    <string name="app_name">BodegaVersionOne</string>
    <!-- A bunch of strings for testing -->
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="all_products">All Products</string>
    <string name="add_item">Add Item</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="bodega">BODEGA</string>
    <string name="product_image">Product Image</string>
    <string name="user_id">User Id</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_message">Sent successfully. Please review all info.</string>
    <string name="submit">Submit</string>
    <string name="first_name_label">First Name:</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="last_name_label">Last Name:</string>
    <string name="support_ticket">Create a New Support Ticket</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="please_fill_out_all_fields">Please fill out all fields</string>
    <string name="ticket_response">A member of the BODEGA team will reach out you in the next 1-2 business days.</string>
    <string name="total_completed_orders_placeholder">Total Completed Orders: 11</string>
    <string name="tickets_in_progress_placeholder">Tickets in Progress: 2</string>
    <string name="reset_password">Reset Password</string>
    <string name="ticket_confirmed">TICKET CONFIRMED</string>
    <string name="ticket_number_placeholder">#637784900ES8</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="sample_block">This is a large block of sample text</string>
    <string name="cartTitle">Cart</string>
    <string name= "phone_num">Phone Number</string>
    <string name="address"> Address</string>
    <string name="pay_shipping">Payment and Shipping Information</string>
    <string name= "purchase">Purchase</string>
    <string name= "thank_you"> Thank you for your purchase!</string>
    <string name= "order_onthe_way"> Your order is on its way!</string>
</resources>