<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:backgroundTint="@android:color/transparent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_border"

        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageProduct"
                android:layout_width="100dp"
                android:src="@mipmap/ic_launcher"
                android:background="@drawable/custom_image_border"
                android:layout_height="100dp"
                android:contentDescription="@string/product_image" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_border"
                android:gravity="center_vertical"
                android:layout_marginStart="2dp">

                <TextView
                    android:id="@+id/title"
                    android:textColor="@color/slate_grey"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/description"
                    android:textColor="@color/slate_grey"
                    android:textStyle="normal"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:text="@string/description"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>